[package]
name = "dm-rs"
version = "0.1.0"
edition = "2021"

# # 指定32位编译
# [target.i686-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
windows = { version = "0.48.0", features = ["Win32_System_Com", "Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_Ole"] }
